feat(api):add admin add user api
